--- a/front/src/App.css
+++ b/front/src/App.css
@@ -31,6 +31,62 @@ body {
   to { transform: rotate(360deg); }
 }
 
+.search-input {
+  color: gray;
+    font-size: 26px;
+    border-style: none;
+    background: #e8e8e8;
+    border-radius: 4px;
+    margin: 8px;
+}
+
+.search-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 15px;
+  background: #f7f6f6;
+  border-bottom: 1px solid #dedede;
+}
+
+.search-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.search-button {
+  color: white;
+  background: #639fff;
+  width: 80px;
+  padding: 5px;
+  font-size: 15px;
+  font-family: avenir;
+  border-radius: 4px;
+  border: none;
+}
+
+.search-prompt {
+  color: #848383;
+}
+
+.header {
+  padding-left: 350px;
+}
+
+.header-artist {
+  font-size: 22px;
+  color: #888888;
+}
+
+.header-track {
+  margin: 0;
+  font-size: 34px;
+  color: #484747;
+
+}
+
 .track-wrapper {
   border-bottom: 1px solid #d2d2d2;
     padding: 8px;
@@ -64,12 +120,12 @@ body {
   top: 0; /* Stay at the top */
   left: 0;
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
+  position: absolute;
+  padding-top: 270px;
 }
 
 .track-features, .related-tracks {
   margin-left: 350px;
-  position: fixed;
   max-width: 800px;
   min-width: 300px;
   width: 100%;
