--- a/front/src/App.css
+++ b/front/src/App.css
@@ -8,8 +8,8 @@ body {
 
 .App {
     display: grid;
-    grid-template-columns: 300px 1fr;
-    grid-template-rows: auto 1fr auto;
+    grid-template-columns: 300px 1fr 560px;
+    grid-template-rows: auto 185px auto;
 }
 
 .App-logo {
@@ -38,7 +38,7 @@ body {
 }
 
 .search {
-  grid-column: span 2;
+  grid-column: span 3;
 }
 
 .search-input {
@@ -149,14 +149,16 @@ body {
 .side-bar {
   grid-row-start: 3;
   grid-column-start: 1;
+  margin: 0px 16px;
 }
 
 .track-features, .related-tracks {
-  max-width: 800px;
+  max-width: 1200px;
   min-width: 300px;
   width: 100%;
   grid-row-start: 3;
   grid-column-start: 2;
+  grid-column: span 2;
 }
 
 .graph-bar {
@@ -165,15 +167,12 @@ body {
   border-radius:20px;
   height: 18px;
   display: inline-block;
-  position: absolute;
-  margin-left: 180px;
+  /* position: absolute;
+  margin-left: 180px; */
   transition: width 0.5s;
 }
 
 .attribute {
-  width: 140px;
-  min-width: 140px;
-  display: inline-block;
   margin-top: 5px;
   margin-right: 15px;
   vertical-align: top;
@@ -181,8 +180,27 @@ body {
 }
 
 .feature-row {
-  display: flex;
+  display: grid;
   padding: 10px 0px;
+  grid-template-columns: 180px 1fr 40px;
+  grid-template-rows: auto 1fr auto;
+  border-bottom: 1px solid #d6d6d6;
+  margin: 0px 25px;
+}
+
+.track-feature-row {
+  display: grid;
+  padding: 10px 0px;
+  grid-template-columns: 180px auto 1fr 40px;
+  grid-template-rows: auto 1fr auto;
+  border-bottom: 1px solid #d6d6d6;
+  margin: 0px 25px;
+}
+
+.track__img {
+  object-fit: cover;
+  width: 100%;
+
 }
 
 .rel-track_name {
@@ -223,4 +241,32 @@ body {
 
 .musical-key {
   margin-top: 9px;
+}
+
+.track-feature_checkbox {
+  margin-right: 15px;
+}
+
+.feature-description {
+  grid-row-start: 2;
+  grid-column-start: 3;
+  padding: 16px 0px 0px 0px;
+  width: 450px;
+  display: flex;
+}
+
+.feature-description__wrapper {
+  align-self: flex-end;
+  border: 1px solid gray;
+  border-radius: 6px;
+  padding: 7px;
+}
+
+.feature-description__title {
+  font-size: 22px;
+  margin-top: 5px;
+}
+
+.feature-description__text {
+  font-size: 12px;
 }
