info icons now display feature description on hover

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -212,6 +212,10 @@ body {
   vertical-align: bottom;
 }
 
+.track-feature_info-wrapper {
+  position: relative;
+}
+
 .numerical {
   opacity: 0;
 }
