--- a/front/src/App.css
+++ b/front/src/App.css
@@ -100,6 +100,11 @@ body {
   color: #888888;
 }
 
+.header-addition-artist {
+  font-size: 14px;
+  color: #888888;
+}
+
 .header__text {
   display: inline-block;
 }
@@ -166,6 +171,7 @@ body {
 .track-artists {
   font-size: 12px;
 }
+
 .track-name {
   font-size: 16px;
 }
