--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,3 +1,10 @@
+#root {
+  --main-grey: #888686;
+  --light-grey: #d6d6d6;
+
+}
+
+
 p {
   margin: 0;
 }
@@ -27,21 +34,21 @@ body {
 }
 
 .search-input {
-  color: gray;
-    font-size: 24px;
-    border-style: none;
-    background: #e8e8e8;
-    border-radius: 4px;
-    margin: 8px;
-    padding-right: 30px;
-    width: 240px;
+  color: var(--main-grey);
+  font-size: 24px;
+  border-style: none;
+  border-radius: 4px;
+  margin: 8px;
+  padding-right: 30px;
+  width: 240px;
+  border: 1px solid var(--light-grey);
 }
 
 .search-wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #f7f6f6;
+  background: white;
   border-bottom: 1px solid #dedede;
   height: 50px;
   transition: .8s;
@@ -60,7 +67,7 @@ body {
 
 .search-button {
   color: white;
-  background: #888888;
+  background: var(--main-grey);
   width: 80px;
   padding: 5px;
   font-size: 15px;
@@ -74,7 +81,7 @@ body {
   background: none;
   width: 20px;
   right: 15px;
-  fill: #848383;
+  fill: var(--main-grey);
   margin-left: -35px;
   width: 20px;
   padding: 0;
@@ -82,7 +89,7 @@ body {
 }
 
 .search-prompt {
-  color: #848383;
+  color: var(--main-grey);
   display: inline-flex;
   margin: 0px 8px;
 }
@@ -97,12 +104,12 @@ body {
 
 .header-artist {
   font-size: 22px;
-  color: #888888;
+  color: var(--main-grey);
 }
 
 .header-addition-artist {
   font-size: 14px;
-  color: #888888;
+  color: var(--main-grey);
 }
 
 .header__text {
@@ -112,7 +119,7 @@ body {
 .header__track-title {
   margin: 0;
   font-size: 30px;
-  color: #808080;
+  color: var(--main-grey);
 }
 
 
@@ -120,8 +127,8 @@ body {
   width: 220px;
   height: 36px;
   background: white;
-  color: #888686;
-  border: 1px solid #cecece;
+  color: var(--main-grey);
+  border: 1px solid var(--light-grey);
   margin-top: 6px;
   border-radius: 30px;
   margin-bottom: 5px;
@@ -132,7 +139,7 @@ body {
 
 .feature-main_wrapper {
   margin: 0px auto;
-  border: 1px solid #cecece;
+  border: 1px solid var(--light-grey);
   border-radius: 8px;
   max-width: 900px;
 }
@@ -149,8 +156,8 @@ body {
   width: 220px;
   height: 36px;
   background: white;
-  color: #888686;
-  border: 1px solid #cecece;
+  color: var(--main-grey);
+  border: 1px solid var(--light-grey);
   margin-top: 6px;
   border-radius: 30px;
   margin-bottom: 5px;
@@ -211,7 +218,7 @@ body {
   margin-right: 15px;
   text-align: right;
   font-size: 14px;
-  color: #888888;
+  color: var(--main-grey);
   align-self: center;
 }
 
@@ -220,7 +227,7 @@ body {
   padding: 4px 0px;
   grid-template-columns: auto auto 180px 1fr 50px;
   grid-template-rows: auto 1fr auto;
-  border-bottom: 1px solid #d6d6d6;
+  border-bottom: 1px solid var(--light-grey);
   margin: 0px 25px;
 }
 
@@ -229,7 +236,7 @@ body {
   padding: 4px 0px;
   grid-template-columns: 15px 165px auto 1fr auto;
   grid-template-rows: 28px;
-  border-bottom: 1px solid #d6d6d6;
+  border-bottom: 1px solid var(--light-grey);
   margin: 0px 25px;
 }
 /* .track-feature-row:hover .numerical {
@@ -246,7 +253,7 @@ body {
 
 .track-feature_info-wrapper > .feature-description__wrapper {
   align-self: flex-end;
-  border: 1px solid gray;
+  border: 1px solid var(--light-grey);
   border-radius: 6px;
   padding: 7px;
   position: absolute;
@@ -260,7 +267,7 @@ body {
 .numerical {
   font-size: 14px;
   align-self: center;
-  color: #888888;
+  color: var(--main-grey);
 }
 
 
@@ -285,7 +292,7 @@ body {
 .rel-track_val {
   font-size: 14px;
   align-self: center;
-  color: #888888;
+  color: var(--main-grey);
 }
 
 .rel-track_name:hover {
@@ -307,7 +314,7 @@ body {
   min-width: 160px;
   margin-right: 15px;
   font-size: 14px;
-  color: #888888;
+  color: var(--main-grey);
 }
 
 .related-tracks .graph-bar {
@@ -321,7 +328,7 @@ body {
 .text-val {
   align-self: center;
   font-size: 14px;
-  color:#888888
+  color:var(--main-grey)
 }
 
 .track-feature_checkbox-wrapper {
@@ -347,13 +354,14 @@ body {
   margin: 0 auto;
   box-sizing: border-box;
   padding-right: 25px;
-  background: #f3f3f3;
+  /* background: #f3f3f3; */
   border-radius: 8px 8px 0px 0px;
+  border-bottom: 1px solid var(--light-grey);
 }
 
 .feature-description__wrapper {
   align-self: flex-end;
-  border: 1px solid gray;
+  border: 1px solid var(--main-grey);
   border-radius: 6px;
   padding: 7px;
   position: absolute;
@@ -381,13 +389,13 @@ body {
 
 .feature__select-text {
   font-size: 14px;
-  color: #888686;
+  color: var(--main-grey);
 }
 
 .feature__select-dropdown {
   display: block;
-  color: #888686;
-  border: none;
+  color: var(--main-grey);
+  border: 1px solid var(--light-grey);
   background: white;
  }
 
@@ -404,24 +412,26 @@ body {
 .feature__header-info-text {
   font-size: 20px;
   font-weight: 300;
-  color: #888686;
+  color: var(--main-grey);
   max-width: 300px;
 }
 
 .feature__header-info-track {
   font-size: 16px;
   font-weight: 300;
-  color: #888686;
+  color: var(--main-grey);
 }
 
 .feature-description__title {
   font-size: 16px;
   margin-top: 5px;
+  color: var(--main-grey);
 }
 
 .feature-description__text {
   margin: 5px 0px;
   font-size: 12px;
+  color: var(--main-grey);
 }
 
 .top {
@@ -451,7 +461,7 @@ body {
   justify-content: center;
   display: flex;
   background: white;
-  border-top: 1px solid #cecece;
+  border-top: 1px solid var(--light-grey);
 }
 
 .main .r {
@@ -460,7 +470,7 @@ body {
 
 .svg__info {
   width: 15px;
-  fill: #888686;
+  fill: var(--main-grey);
 }
 .feature__select-inner {
   display: flex;
@@ -476,11 +486,11 @@ body {
 
 .load-track_svg, .external-link_svg {
   vertical-align: middle;
-  fill: #888888;
+  fill: var(--main-grey);
 }
 
 .sort__wrapper {
-  color: #888888;
+  color: var(--main-grey);
   cursor: pointer;
   align-self: flex-end;
   padding-bottom: 5px;
