adding menu svg

--- a/front/src/App.css
+++ b/front/src/App.css
@@ -7,7 +7,7 @@
 #root >.App.nightMode {
   --main-grey: #d2cece;
   --light-grey: #d2cece;
-  --primary-background: #2f3c56;
+  --primary-background: #283142;
 }
 
 
